--- a/GithubTest/app/src/main/res/layout/activity_main.xml
+++ b/GithubTest/app/src/main/res/layout/activity_main.xml
@@ -18,4 +18,9 @@
             android:layout_height="wrap_content"
             android:text="button1"
             />
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="button2"
+            />
 </LinearLayout>
