--- a/GithubTest/app/src/main/res/layout/activity_main.xml
+++ b/GithubTest/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,9 @@
             android:layout_height="wrap_content"
             android:text="button2"
             />
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="button3"
+            />
 </LinearLayout>
